# docs/swagger.yaml
@@ -437,4 +437,38 @@ paths:
           schema:
             $ref: '#/definitions/errcode.Error'
       summary: 更新標籤
+  /upload/file:
+    post:
+      parameters:
+      - description: 檔案路徑
+        in: body
+        name: file
+        required: true
+        schema:
+          type: string
+      - description: 檔案類型[1:ImageFile(.jpg .gif .png), 2:DocFile(.pdf)]
+        enum:
+        - 1
+        - 2
+        in: body
+        name: type
+        required: true
+        schema:
+          type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '成功  {"file_access_url": XXX}  '
+          schema:
+            type: string
+        "400":
+          description: 請求錯誤
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 內部錯誤
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 上傳檔案
 swagger: "2.0"
